# ripl

./: .gitignore  LICENSE  Makefile  README.md  RIPL.cf  RIPL.grammar  ripl.cabal  stack.yaml
app/: RIPLC.hs
docs/: _config.yml  index.md
docs/_layouts/: default.html
docs/_pages/: installing-ripl.md
docs/_posts/: 2016-10-22-debugging.md  2016-10-22-installing-ripl.md  2016-10-22-ripl-to-c.md
docs/css/: main.css
eclipse-files/: .project
examples/: bitWidthMap.ripl  foldVector.ripl  image-scaling.ripl  included-example.ripl  ippro-4x4.ripl  iunzipFilter2D.ripl  map.ripl  threshold-max.ripl  threshold.ripl  transpose.ripl  unzip.ripl  visual-saliency.ripl  wavelet.ripl
include/std/stdio/: EndOfStream.cal  FileReader.cal  RGBToYUV.cal  StreamToGrey.cal  StreamToYUV.cal  StreamToYUV3Ports.cal  YToStream.cal  YUVToRGB.cal  YUVToStream.cal
new-examples/: fold-2.ripl  fold-example.cal  fold-example.ripl  gray-brighten.ripl  gray-zipwith.ripl  histogram-equalisation.ripl  max-threshold.ripl  mean-shift-segmentation.ripl  rgb-brighten.ripl  rgb-zipwith.ripl  splitX.ripl  splitY.ripl  stencil-indexed-2d.ripl  stencil-indexed.ripl  stencil1d-x-test.ripl  stencil2d-xy-test.ripl
src/: AstMappings.hs  Compiler.hs  RiplFrontend.hs  Types.hs  Utils.hs  XDFNetwork.hs
src/Inference/: BitWidth.hs  Colour.hs  Dimension.hs  Offset.hs
src/Pass/: Inliner.hs  SingleAssignmentCheck.hs
src/SkeletonTemplates/: CalTypes.hs  Common.hs  Convolve.hs  Filter2D.hs  Fold.hs  FoldScalar.hs  FoldVector.hs  IUnzipFilter2D.hs  Identity.hs  Imap.hs  Iunzip.hs  Map.hs  Parameters.hs  Repeat.hs  Scale.hs  Scan.hs  SplitX.hs  SplitY.hs  Stencil.hs  Stencil1D.hs  Stencil2D.hs  Transpose.hs  Unzip.hs  YUVToStream.hs  ZipWith.hs  ZipWithScalar.hs  ZipWithVector.hs
stdlib/: pointwise.ripl
templates/: splitX.cal  splitY.cal
testbench/: Testbench_MS_Ripl.v
tests/: ParserTests.hs
trets/: average-filter.ripl  brighten.ripl  histogram-normalisation.ripl  max-pixel.ripl  max-threshold.ripl  visual-saliency.ripl
